[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/level.gd" type="Script" id=1]
[ext_resource path="res://assets/tile_sets/navigation.tres" type="TileSet" id=2]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="NavigationMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_mask = 0
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="RadarShapes" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="TopLeft" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 32.0
}

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 640, 360 )
__meta__ = {
"_gizmo_extents_": 32.0
}
